# SEALTorch

./: .gitignore  CMakeLists.txt  README.md
build-vscode/: sealtorch_gui  sealtorch_tiny_test
src/: main.cpp  mnist_mlp_gelu.json  mnist_mlp_gelu_improved.json  mnist_mlp_relu.json  tiny_inference_test.cpp  trace_main.cpp  validate_main.cpp
src/SEALTorch/: evaluator.cpp  evaluator.h  inference.cpp  inference.h  math.cpp  math.h  metrics.cpp  metrics.h  model.h  sealtorch.h
webui/: index.html  server.py
